--- a/offers.html
+++ b/offers.html
@@ -48,7 +48,7 @@
         <!-- Offer 1 -->
         <div class="col-md-4">
           <div class="card bg-dark border-0 shadow-lg h-100">
-            <img src="image/offer1.jpg" class="card-img-top" alt="Luxury Stay">
+            <img src="image/offers1.jpg" class="card-img-top" alt="Luxury Stay">
             <div class="card-body">
               <h5 class="card-title fw-bold text-warning">Luxury Weekend Getaway</h5>
               <p class="card-text">Enjoy 2 nights in a deluxe suite with complimentary breakfast and spa access.</p>
@@ -94,7 +94,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <img src="image/offer1.jpg" class="img-fluid mb-3 rounded" alt="Luxury Stay">
+          <img src="image/offers1.jpg" class="img-fluid mb-3 rounded" alt="Luxury Stay">
           <p>Indulge in a 2-night escape to a deluxe suite with complimentary breakfast, spa access, and a welcome drink on arrival. Perfect for couples looking for a luxurious and relaxing weekend.</p>
           <ul>
             <li>2-night stay in Deluxe Suite</li>
